9월 17일 오후 수업 필기추가(float)

--- a/studyContent/study_210917.md
+++ b/studyContent/study_210917.md
@@ -65,6 +65,50 @@
 
 
 
+#### float
+
+- ex) img는 인라인/ p는 블럭 요소 이므로 밑 사진처럼 하기 위해서는  float 기능을 사용해야함
+
+![이미지 예제](./images/float_ex.png)
+
+- 옆으로 나열
+- display : block
+- 부모 auto이면 사이즈 : 0
+
+- ![부모auto 사진](./images/float_auto.png)
+  - 뒤에 파란색 점선이 부모
+
+- (이미지 + text) X -> float 은 형제들 모두 float 사용해야 함
+- 위 사진에서 판 역할을 하는 걸 형제 마지막에 넣어주고 `clear:both` 같은걸 넣어주면 부모의 높이가 생김
+  - ![float의 clear](./images/float_floor.png)
+- 판떼기 역할은 꼭 div가 아니어도 됨 (hr, br, p 등등 가능)
+
+- list 형태일 경우 li에 `::after`를 넣고 `content`는 공백 `display : none`
+
+  - ```css
+    ul.float_area::after {
+      content: ""; display: block;
+      width: 100%; height: 0;
+      clear: both;
+    }
+    ```
+
+- 대게는 클래스 명에 `clearfix`로 명명한 뒤 밑 코드처럼 암기해서 사용
+
+  - ```css
+    .clearfix::after {
+      content: ""; display: block; clear: both;
+    }
+    ```
+
+- 
+
+
+
+
+
+
+
 #### css 파일 
 
 - html 파일에서 link 로 선언 (연결)
@@ -109,4 +153,7 @@
 - `cc:ie` : explore를 위한 조건부 주석 단축키
 
 - 모든 문서는 마지막 한줄 공간 남김
+- 코딩용 폰트 : hack font / d2coding
+- 이미지파일은 가로/세로 중 하나는 오토로 줘야 비율이 유지됨
+- 페이지의 70%은 리스트 40%이상은 float
 
