--- a/studyContent/study_210930.md
+++ b/studyContent/study_210930.md
@@ -10,7 +10,7 @@ position 에서 기준을 잡아주는 속성은 relative
 
 position 안에 position 또 사용 가능 / relative 기준 잡아놓은것 잘 확인하기
 
-- 인접형제선택자 + : 선택요소 바로 뒤에 오는 요소
+- 인접형제선택자 `+` : 선택요소 바로 뒤에 오는 요소
 
 - ```html
   <dl class="siblings">
@@ -62,7 +62,7 @@ position 안에 position 또 사용 가능 / relative 기준 잡아놓은것 잘
 
 
 
-- 형제선택자 ~ : 선택요소 뒤에 오는 조건에 맞는 요소
+- 형제선택자 `~` : 선택요소 뒤에 오는 조건에 맞는 요소
 
 - ```css
   .siblings > dt:hover ~ dd{
@@ -78,10 +78,40 @@ position 안에 position 또 사용 가능 / relative 기준 잡아놓은것 잘
 
   
 
-  
 
-핵사코드로 투명도
 
-- #aa00aa_ _ : 뒷자리에 16진수로 숫자 넣어서 투명도
+---
 
-`text-transform: capitalize;` : 첫 글자를 대문자로
+
+
+- 핵사코드로 투명도
+  - #aa00aa_ _ : 뒷자리에 16진수로 숫자 넣어서 투명도
+
+
+
+- `text-transform: capitalize;` : 첫 글자를 대문자로
+
+
+
+- 클래스나 id명에 ad, banner 사용 금지 : 광고차단프로그램에 막힘
+
+- copyright 부분을 보통 `address` 사용
+
+
+
+- chrome 에서 목차 확인하는 확장프로그램 : 웹스토어 ► outliner 
+
+  ​																						   ► headingsmap : 주소가 localhost일때만 작동
+
+
+
+- `box-shadow: 3px 3px 3px #333;` : 그림자의 x좌표, y좌표, 블러, 색상
+
+- `autofocus` : 포커스를 먼저 잡아주기
+
+  ```html
+  <button type="button" autofocus>닫기</button>
+  ```
+  - 구형브라우저는 안먹음
+  - 한 문서에 보통 최대 하나만 사용
+
