필기내용 수정

--- a/studyContent/study_211005.md
+++ b/studyContent/study_211005.md
@@ -46,7 +46,7 @@ git bash (cli)로 깃 첨부방법
 
 ###### 광고영역 잡기 (가로로 슬라이드)
 
-```
+```html
 <!-- .view_area 영역의 위치를 잡기 위한 틀 -->
       <div class="view_area">
         <!-- .view_wrapper 광고영역의 나열 시 범위 -->
@@ -59,7 +59,7 @@ git bash (cli)로 깃 첨부방법
       </div>
 ```
 
-```
+```css
 .view_area {
   width: 100%; height: 100%;
   border: 1px solid #333;
@@ -91,6 +91,24 @@ git bash (cli)로 깃 첨부방법
 
 
 ###### 같은자리에 모여있는 형태로 사용 방법
+
+```css
+.view_wrapper {
+  position: relative;
+  width: 100%; height: 100%;
+  background-color: #fca;
+}
+
+.view_content {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+}
+
+.view_01 { z-index: 10; background-color: #8D0909aa;}
+.view_02 { z-index: 9; background-color: #23BE93aa;}
+.view_03 { background-color: #9A6DCAaa;}
+```
 
 - 기준이 되는 요소에 relative
 - 보여줄 요소에 absolute
