10월 5일 참고 url 추가

--- a/studyContent/study_211005.md
+++ b/studyContent/study_211005.md
@@ -116,3 +116,11 @@ git bash (cli)로 깃 첨부방법
 - 이후에 (뒤에) 오는 요소에는 z-index를 앞에 오는 요소보다 낮은 값으로 주어 뒤에 배치
 - 이외의 나머지는 보이지 않도록 처리
 
+
+
+
+
+#### 기타
+
+[background 속성 공부](https://blog.naver.com/qhfudwl/222465616274)
+
