필기내용 추가

--- a/studyContent/study_211006.md
+++ b/studyContent/study_211006.md
@@ -72,5 +72,23 @@
 
 #### unit
 
-- 16px = 12pt = 100% = 1em = 1rem
+- 16px === 12pt === 100% === 1em === 1rem
   - em 단위는 잘 적용하지 않음 - 완벽하게 처리가 잘 안됨
+  - em은 font사이즈에 박스사이즈를 다시 맞춰야함
+  - 기준(root) font-size가 14px 일 경우 `:root { font-size: 14px;}`
+    - 16px === 12pt !== 100% !== 1em !== 1rem
+  - rem은 root기준
+
+
+
+---
+
+```
+@supports (--color1: #220) {
+	.size_03 {
+	background-color: var(--color2);
+	}
+}
+```
+
+- `--color1`이라는 변수가 읽히면 밑의 내용을 수행해라
