필기내용 추가

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -30,4 +30,43 @@
 - `absolute` : relative가 기준이 됨
   - padding 적용 안됨
   - border는 적용 됨
+  - 부모나 그 위에 부모에게도 relative가 없으면 브라우저 기준
+
+---
+
+##### 글씨 옆 바 만들기
+
+<img src="./images/bar_ex.png" align="left">
+
+```css
+/* 가상요소: after 사용 */
+.nav_list li:after,
+.nav_list li::after {
+  content: ""; display: block;
+  position: absolute; top: 0; bottom: 0; right: -5px;
+  margin: auto;
+  width: 1px; height: 10px;
+  border-right: 1px solid #777;
+  display: none;
+} 
+
+.nav_list li:last-child:after,
+.nav_list li:last-child::after { display: none;}
+```
+
+- background-color와 나머지는 본인 스타일대로 살리기
+
+- b_step_01/html/c_01_position_set.html 참고
+
+
+
+---
+
+- `site breadcrumbs` 기법 : 사이트 이동경로
+
+  <img src="./images/breadcrumb.png" style="zoom: 80%" align="left">
+
+- ㄴㅇㄹ
+
+
 
