image사이즈 변경

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -12,7 +12,7 @@
 
   - 투명 상자와 민트색 상자 모두 같은 sticky 적용
 
-    <img src="./images/sticky-1.png" style="zoom: 30%;" align="left"> <img src="./images/sticky-2.png" style="zoom: 30%">
+    <img src="./images/sticky-1.png" width="50%" align="left"> <img src="./images/sticky-2.png" width="40%">
 
     
 
@@ -22,7 +22,7 @@
 
     
 
-    <img src="./images/sticky-3.png" style="zoom:30%" align="left">
+    <img src="./images/sticky-3.png" width="50%" align="left">
 
     
 
@@ -66,7 +66,7 @@
 
   <img src="./images/breadcrumb.png" style="zoom: 80%" align="left">
 
-- ㄴㅇㄹ
+- ㄴㅇㄹS
 
 
 
