이미지 변경중

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -12,19 +12,17 @@
 
   - 투명 상자와 민트색 상자 모두 같은 sticky 적용
 
-    <img src="./images/sticky-1.png" width="50%" align="left"> <img src="./images/sticky-2.png" width="40%">
+    <img src="./images/sticky-1.png" width="50%"> <img src="./images/sticky-2.png" width="40%">
 
     
 
     
 
-    
+    <img src="./images/sticky-3.png" width="50%">
 
-    
 
-    <img src="./images/sticky-3.png" width="50%" align="left">
 
-    
+
 
 - `relative` : 기준만 잡아주거나 z-index를 위해 사용
 - `absolute` : relative가 기준이 됨
