이미지 변경

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -34,7 +34,7 @@
 
 ##### 글씨 옆 바 만들기
 
-<img src="./images/bar_ex.png" align="left">
+<img src="./images/bar_ex.png">
 
 ```css
 /* 가상요소: after 사용 */
@@ -62,9 +62,7 @@
 
 - `site breadcrumbs` 기법 : 사이트 이동경로
 
-  <img src="./images/breadcrumb.png" style="zoom: 80%" align="left">
+  <img src="./images/breadcrumb.png" width="40%">
 
-- ㄴㅇㄹS
-
-
+- 
 
