이미지 사이즈 변경

--- a/studyContent/study_211001.md
+++ b/studyContent/study_211001.md
@@ -7,7 +7,7 @@
 - 하지만 header/asdie/footer/nav의 특정 위치나 기능을 자체의 성향을 가지고 있는 요소는 내부에 section/article을 사용할 수 없다.
 - header의 경우는 내부에 nav요소를 가질 수 있다.
 
-<img src="./images/semantic.jpg" style="zoom:70%" align="left"/>
+<img src="./images/semantic.jpg" width="70%"/>
 
 
 
