이미지 변경

--- a/studyContent/study_210930.md
+++ b/studyContent/study_210930.md
@@ -50,13 +50,13 @@ position 안에 position 또 사용 가능 / relative 기준 잡아놓은것 잘
 
   - dl에 마우스 올리면 dt배경색 변경
 
-    <img src="./images/sibling_hover1.png" style="zoom : 80%" align="left" />
+    <img src="./images/sibling_hover1.png" width="50%"/>
 
   - dt에 마우스 올리면 바로 뒤에있는 dd에만 배경색 변경
 
-    <img src="./images/sibling_hover2.png" style="zoom : 80%"  align="left" />
+    <img src="./images/sibling_hover2.png" width="50%"/>
 
-    <img src="./images/sibling_hover3.png" style="zoom : 80%"  align="left" />
+    <img src="./images/sibling_hover3.png" width="50%"/>
 
 
 
@@ -72,9 +72,9 @@ position 안에 position 또 사용 가능 / relative 기준 잡아놓은것 잘
 
   - 마우스를 올린 dt기준으로 뒤에 dd만 배경색 변경
 
-    <img src="./images/sibling_hover4.png" style="zoom : 80%"  align="left" />
+    <img src="./images/sibling_hover4.png" width="50%">
 
-    <img src="./images/sibling_hover5.png" style="zoom : 80%"  align="left" />
+    <img src="./images/sibling_hover5.png" width="50%">
 
   
 
