이미지 변경

--- a/studyContent/study_210929.md
+++ b/studyContent/study_210929.md
@@ -17,7 +17,7 @@
 
 - html은 나중에 쓴 코드가 위에 배치됨
 
-  <img src="./images/position_1.png" style="zoom:50%;" />
+  <img src="./images/position_1.png" width="70%" />
 
 
 
