필기내용 추가

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -64,5 +64,41 @@
 
   <img src="./images/breadcrumb.png" width="40%">
 
-- 
+- `tabindex` 속성 : 
 
+  - -1 : focus 기능을 가지고 있는 속성을 제거
+  - 0 : focus 기능을 강제 부여 (a, button처럼)
+  - 1 : focus 기능을 강제 부여 + 우선순위를 먼저 가질 수 있음
+
+---
+
+##### slide / indicator
+
+- 인디케이터에서 해당 슬라이드로 이동 - href에 클래스 명
+
+  ```html
+  <li><a href="#slide_01"><span class="blind">01</span></a></li>
+  ```
+
+  
+
+- 가운데 배치 - transform 사용
+
+  ``` css
+  .btn { 
+    position: absolute; top: 50%; left: 50%;
+    width: 130%; height: 0; 
+    transform: translateX(-50%);
+    margin: auto;
+  }
+  ```
+
+- 그림자 안으로 넣기 - box-shadow에서 inset 사용
+
+  ```css
+  .btn button:focus { 
+  	box-shadow: 3px 3px 3px #157 inset; background-color: #7aa;
+  }
+  ```
+
+  
