자바스크립트 부분 추가

--- a/studyContent/study_211011.md
+++ b/studyContent/study_211011.md
@@ -102,3 +102,25 @@
   ```
 
   
+
+---
+
+#### js
+
+```js
+//한줄 주석
+```
+
+```js
+/*
+여러줄
+주석
+*/
+```
+
+- 변수
+
+```js
+var t = 'test입니다.';
+```
+
