필기내용 추가

--- a/studyContent/study_211012.md
+++ b/studyContent/study_211012.md
@@ -8,6 +8,7 @@
 - `transform: rotate(각도);` : 각도만큼 돌아가기
 - `vw` : 브라우저 가로값에 대한 비율
 - `img`태그 대신 `baground-image`사용
+- `word-break: keep-all;` : 단어 위주로 줄바꿈
 
 
 
