필기내용 추가

--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -3,10 +3,19 @@
 #### css
 
 - transform
-  - translate() : 위치 이동
-  - rotate() : 회전
-  - skew() : 기울기
-  - perspective() : 원근법
+  - **translate()** : 위치 이동
+    - `translate(x, y);` : x축, y축으로 이동 / 1개의 값만 쓰면 x축
+    - `translateX();` : x축으로 이동
+    - `translateY();` : y축으로 이동
+    - `translateZ();` : z축으로 이동
+    - `(00%)` : translate에 %는 부모의 값이 아닌 자신이 기준
+  - **scale()** : 크기
+    - `scale(x, y);` : x축, y축으로 크기 변경 ex) 1.2배 - 120%, 1.2 둘다 가능
+    - `scaleX();` : x축으로 길어지거나 줄어듬, 안의 글자나 내용물도 같이 변경
+    - `scaleY();` : y축으로 길어지거나 줄어듬, 안의 글자나 내용물도 같이 변경
+  - **rotate()** : 회전
+  - **skew()** : 기울기
+  - **perspective()** : 원근법
     - perspective : trsnform에 들어가는 값과 동일한 기능이지만 그 범위를 설정할때 사용하는 기능
 
 - overflow, visibility, border-radius
