transform 복합수행까지 필기내용 추가

--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -2,7 +2,8 @@
 
 #### css
 
-- transform
+- ##### transform:
+
   - **translate()** : 위치 이동
     - `translate(x, y);` : x축, y축으로 이동 / 1개의 값만 쓰면 x축
     - `translateX();` : x축으로 이동
@@ -11,12 +12,24 @@
     - `(00%)` : translate에 %는 부모의 값이 아닌 자신이 기준
   - **scale()** : 크기
     - `scale(x, y);` : x축, y축으로 크기 변경 ex) 1.2배 - 120%, 1.2 둘다 가능
+      - `scale()` : 한개만 쓰면 x,y동시에 같은 비율로 크기 변경
     - `scaleX();` : x축으로 길어지거나 줄어듬, 안의 글자나 내용물도 같이 변경
     - `scaleY();` : y축으로 길어지거나 줄어듬, 안의 글자나 내용물도 같이 변경
-  - **rotate()** : 회전
   - **skew()** : 기울기
+    - `skew()` : (각도) 각도만큼 뒤틀기
+    - `skewX()` : x축을 기준으로 각도만큼 뒤틀기
+    - `skewY()` : y축을 기준으로 각도만큼 뒤틀기
+  - **rotate()** : 회전
+    - `rotate()` : (각도) 각도만큼 오른쪽으로 회전 / 기본 축이 z축
+    - `rotateX()` : x축을 기준으로 회전
+    - `rotateY()` : y축을 기준으로 회전
+      - +`backface-visibility` : 뒤집힐 경우 뒷면은 보이지 않게함
+    - `rotate3d(x, y, z, a)` : x축, y축, z축, 앵글(각도) / 나머지 축들은 0~1사이
   - **perspective()** : 원근법
     - perspective : trsnform에 들어가는 값과 동일한 기능이지만 그 범위를 설정할때 사용하는 기능
+    - `perspective(10px);` : 모니터에 최대한 가깝게 붙임
+  - 복합으로 사용하기
+    - translate와 rotate는 사용하는 순서에 따라서 하는 행동이 다름 (시간초 넣어서 보면 움직이는게 보임)
 
 - overflow, visibility, border-radius
 
