필기내용 추가

--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -23,13 +23,14 @@
     - `rotate()` : (각도) 각도만큼 오른쪽으로 회전 / 기본 축이 z축
     - `rotateX()` : x축을 기준으로 회전
     - `rotateY()` : y축을 기준으로 회전
-      - +`backface-visibility` : 뒤집힐 경우 뒷면은 보이지 않게함
+      - +`backface-visibility` : 뒤집힐 경우 뒷면은 보이지 않게함 (hidden || visible)
     - `rotate3d(x, y, z, a)` : x축, y축, z축, 앵글(각도) / 나머지 축들은 0~1사이
   - **perspective()** : 원근법
     - perspective : trsnform에 들어가는 값과 동일한 기능이지만 그 범위를 설정할때 사용하는 기능
-    - `perspective(10px);` : 모니터에 최대한 가깝게 붙임
+    - `perspective(10px);` : 모니터에 최대한 가깝게 붙임 / 숫자가 적을수록 모니터와 가까움
   - 복합으로 사용하기
     - translate와 rotate는 사용하는 순서에 따라서 하는 행동이 다름 (시간초 넣어서 보면 움직이는게 보임)
+  - `transform-origin: x y;` : transform 기준의 좌표를 지정 (0 0 / 100% 100% 등등 가능)
 
 - overflow, visibility, border-radius
 
