--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -39,8 +39,30 @@
 #### html
 
 - video, audio, iframe
+
   - `video` : mp4, ogg, ogv(음성을 뺀 영상), mebM
+
   - `audio` : mp3, ogg
+
+    - `controls` : 컨트롤 바 생성
+    - `autoplay` : 자동으로 재생 ► 웹 접근성 때문에 사용 X
+      - 3초이상 소리가 나는 경우에는 제어가 가능
+    - `preload` : 로딩을 일정부분 미리 해놓음
+    - `loop` : 반복재생
+    - `muted` : 음소거
+
+    ```html
+    <audio controls>
+      <source src="../multi/audio/freedom-inspired-cinematic-background-music-for-video-5606.ogg" type="audio/ogg">
+      <source src="../multi/audio/freedom-inspired-cinematic-background-music-for-video-5606.mp3" type="audio/mp3">
+      <p>현재 사용하고 있는 브라우저는 audio파일을 지원하지 않습니다. <br>
+        <a href="http://google.com/chrome">최신 브라우저</a> 를 사용하세요.
+      </p>
+    </audio>
+    ```
+
+    
+
   - `iframe` : 외부의 문서를 불러와서 삽입하는 코드(facebook, twitter, instagram, youtube)
 
 
@@ -49,5 +71,9 @@
 
 
 
+html : 먼저 처리하는것을 수행, 동일하지만 나중 요소를 배제
 
+css : 하나의 속성에서 여러개 작성하는 경우, 앞의 것을 수행하고 뒤에 것은 배제 (font-family)
+
+css : 동일 속성이 여러개가 존재하면 마지막 것을 수행 (margin: auto; margin-top : 10px;)
 
