필기내용 추가

--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -38,18 +38,23 @@
 
 #### html
 
-- video, audio, iframe
+- ##### video
 
-  - `video` : mp4, ogg, ogv(음성을 뺀 영상), mebM
-
-  - `audio` : mp3, ogg
-
+  - `video` : mp4, ogg, ogv(음성을 뺀 영상), webm
+    - `poster=""` : 썸네일 개념
     - `controls` : 컨트롤 바 생성
     - `autoplay` : 자동으로 재생 ► 웹 접근성 때문에 사용 X
       - 3초이상 소리가 나는 경우에는 제어가 가능
     - `preload` : 로딩을 일정부분 미리 해놓음
     - `loop` : 반복재생
     - `muted` : 음소거
+    - `volum="0"` : 볼륨 조절 - 잘 먹지 않음
+
+  
+
+- ##### audio
+
+  - `audio` : mp3, ogg
 
     ```html
     <audio controls>
@@ -61,7 +66,11 @@
     </audio>
     ```
 
-    
+  - audio/video 요소의 기능은 소리가 담겨져 있거나 재생이 되는 요소이기 때문에 `display: none;`보다는 우선 `muted`, 가장 좋은 방법은 코드(태그)를 삽입/삭제
+
+
+
+- ##### iframe
 
   - `iframe` : 외부의 문서를 불러와서 삽입하는 코드(facebook, twitter, instagram, youtube)
 
@@ -75,5 +84,5 @@ html : 먼저 처리하는것을 수행, 동일하지만 나중 요소를 배제
 
 css : 하나의 속성에서 여러개 작성하는 경우, 앞의 것을 수행하고 뒤에 것은 배제 (font-family)
 
-css : 동일 속성이 여러개가 존재하면 마지막 것을 수행 (margin: auto; margin-top : 10px;)
+css : 동일 속성이 여러개가 존재하면 마지막 것을 수행 (masrgin: auto; margin-top : 10px;)
 
