필기내용 수정

--- a/studyContent/study_211018.md
+++ b/studyContent/study_211018.md
@@ -73,6 +73,7 @@
 - ##### iframe
 
   - `iframe` : 외부의 문서를 불러와서 삽입하는 코드(facebook, twitter, instagram, youtube)
+    - 코드 복사 후 width, height, frameborder 는 삭제 후 css로 옮기기
 
 
 
