필기내용 추가

--- a/studyContent/study_211019.md
+++ b/studyContent/study_211019.md
@@ -4,9 +4,24 @@
 
 - ##### overflow
 
+  - hidden : 넘치는 영역 숨기기
+  - visible : 넘치는 영역 보이기
+  - scroll : 넘치는 영역 스크롤로 보여주기
+  - auto : 스크롤이 없다가 내용이 넘치는 순간 스크롤을 만들어줌
+  - 
+  - overflow-x : x축으로 넘치는 부분만 처리
+  - overflow-y : y축으로 넘치는 부분만 처리
+
 - ##### visiblity
 
+  - visible : 보여주기
+
 - ##### border-radius
+
+  - `border-radius: 수치;` : 수치 만큼 테두리를 둥글게 만듬
+  - `border-radius: 0 50px;` : 왼쪽상단 0, 오른쪽 상단 50, 오른쪽 하단 0, 왼쪽 하단 50
+  - `border-radius: 0 50px 40px;` : 왼쪽상단 0, 오른쪽 상단 50, 오른쪽 하단 40, 왼쪽 하단 50
+  - `border-radius: 0 50px 40px 30px;` :  왼쪽상단 0, 오른쪽상단 50, 오른쪽하단 40, 왼쪽하단 30
 
 
 
