--- a/studyContent/study_211019.md
+++ b/studyContent/study_211019.md
@@ -5,11 +5,17 @@
 - ##### overflow
 
   - hidden : 넘치는 영역 숨기기
+
   - visible : 넘치는 영역 보이기
+
   - scroll : 넘치는 영역 스크롤로 보여주기
+
   - auto : 스크롤이 없다가 내용이 넘치는 순간 스크롤을 만들어줌
-  - 
+
+  - ---
+
   - overflow-x : x축으로 넘치는 부분만 처리
+
   - overflow-y : y축으로 넘치는 부분만 처리
 
 - ##### visiblity
@@ -27,14 +33,40 @@
 
 #### html
 
-- ##### form
+##### form
 
-  - action(자료를 전송하고 검증받을 주소), method(처리방식)
-  - fieldset(영역), legend(form영역 제목)
-  - input(자료를 입력, 버튼), label(input과 연동되는 가이드 기능)
-  - textarea, select, button ...
+- action(자료를 전송하고 검증받을 주소)
+- method(처리방식)
+  - POST : 비공개
+  - GET : 공개
+- fieldset(영역), legend(form영역 제목)
+- input(자료를 입력, 버튼), label(input과 연동되는 가이드 기능)
 
 
+
+`<input type="?">`
+
+- 입력
+  - **text** : 글자를 입력하는 영역
+  - **password** : 비밀번호를 입력하는 영역 - 글씨 노출 X
+- 체크
+  - **radio** : 멀티선택이 불가능하고 하나만 선택할 수 있는 기능, 선택 이후에는 해제 불가능
+  - **checkbox** : 체크리스트처럼 표시하고 해제 가능, 멀티선택 가능
+- 버튼
+  - **submit** : 확인 및 전송
+  - **reset** : 작성한 내용을 초기화
+  - **button** : 전송X, 초기화X 이외의 대부분의 버튼
+  - ~~**image** : submit 기능에 이미지가 들어간 버튼~~
+  - **file** : 전송할 file (첨부파일)
+
+---
+
+`<input>`형식이 아닌 개별의 요소 명
+
+- 멀티형식
+  - **textarea** : text성향이 여러줄 작성하게 만드는 기능
+  - **select** : 목록형식으로 나타나있는 요소 중 하나를 선택하는 형태 (연도선택, 날짜선택)
+  - **button** : `<button></button>` 
 
 
 
