--- a/studyContent/study_211019.md
+++ b/studyContent/study_211019.md
@@ -58,6 +58,8 @@
   - **button** : 전송X, 초기화X 이외의 대부분의 버튼
   - ~~**image** : submit 기능에 이미지가 들어간 버튼~~
   - **file** : 전송할 file (첨부파일)
+- 특수
+  - **hidden** : 자료는 같이 가지고 있으며 보내야 하지만 노출되지 않아야하는 내용
 
 ---
 
@@ -75,3 +77,4 @@
 - ##### transition
 
 - ##### animation
+
