이미지 삽입

--- a/studyContent/study_211020.md
+++ b/studyContent/study_211020.md
@@ -15,6 +15,7 @@
   - value의 값을 적어줘야 함
   - `checked` : 처음 체크되게 하는 설정
 - `type="checkbox"`
+  - <img src="./images/checkbox.png">
   - 같은 질문에 항목들은 name이 같아야함
   - value의 값을 적어줘야 함
   - `checked` : 처음 체크되게 하는 설정
