--- a/studyContent/study_211021.md
+++ b/studyContent/study_211021.md
@@ -1,1 +1,14 @@
 ## 21.10.21
+
+css
+
+- 속성선택자
+  - `[속성명="값"] {}` 으로 사용
+  - `요소[속성명="값"] {}`
+    - `요소[속성명^="값"] {}` : ^은 시작을 의미 - 예시 :  `a[href^="http"] {}`
+    - `요소[속성명$="값"] {}` : $은 끝을 의미 - 예시 :  `a[href$="com"] {}`
+    - `요소[속성명|="값"] {}` : |은 단어형식의 모든것을 의미 
+      - 예시 :  `a[class|="full"] {}  <a class="full-box wrap"</a>`
+    - `요소[속성명*="값"] {}` : *은 모든것을 의미 - 예시 :  `a[class*="a"] {}`
+    - `요소[속성명~="값"] {}` : ~은 분리가능한 단어(값)를 의미 
+      - 예시 :  `a[class~="full"] {}  <a class="full box wrap"</a>`
