10월 21일 !추가 작성 필요!

--- a/studyContent/study_211021.md
+++ b/studyContent/study_211021.md
@@ -1,6 +1,6 @@
 ## 21.10.21
 
-css
+#### css
 
 - 속성선택자
   - `[속성명="값"] {}` 으로 사용
@@ -12,3 +12,16 @@ css
     - `요소[속성명*="값"] {}` : *은 모든것을 의미 - 예시 :  `a[class*="a"] {}`
     - `요소[속성명~="값"] {}` : ~은 분리가능한 단어(값)를 의미 
       - 예시 :  `a[class~="full"] {}  <a class="full box wrap"</a>`
+
+#### form
+
+- 입력
+  - search : 무언가 검색의 용도
+  - email : 이메일 주소를 입력하는 용도
+  - url : 인터넷 주소를 입력하는 용도
+  - tel : 컴퓨터로는 확인이 어렵지만 모바일 기기에서는 숫자키가 나타나는 기능
+- 체크
+  - color : 색상 선택기(color picker)
+  - number : 숫자를 입력하거나 버튼을 클릭하여 카운트 업/다운
+  - range : Gage Bar 형태로 만드는 표현 방법
+- 입력+체크
