--- a/studyContent/study_211025.md
+++ b/studyContent/study_211025.md
@@ -1,2 +1,64 @@
 ## 21.10.25
 
+#### transition
+
+​	`,`를 통해서 한번에 여러개 처리 가능
+
+- `transition-property: transform;` : transition이 어떤 속성을 선택할지
+- `transition-duration: 시간초;` : 몇초동안 시행할지 (ex. 1000ms(1s), 2000ms(2s)...)
+- `transition-timing-function: 속성;` : 
+  - `ease` : 점점 빠르다가 느리게 (자연스럽게)
+  - `ease-in` : 점점 빠르게
+  - `ease-out` : 점점 느리게
+  - `ease-in-out` : 점점 빨라졌다가 느리게 (시작과 끝부분 속도가 같음)
+  - `linear` : 동일한 속도로 지속적으로
+  - `cubit-bezier(수치...)` : 
+
+- `transtion-delay: 시간초;` : 몇초 뒤에 실행할지
+- `transition: 선택자 구현시간 움직임 지연시간;`
+  - `transition: property duration timing-function delay;`
+
+
+
+#### animation
+
+- 속성
+
+  - 1. animation 시간/움직임/반복 등의 선택자에 관련된 내용
+    2. animation의 전체 시간에 따른 비율(%)에 대한 움직임 처리
+
+- `animation-name: ;` : 애니메이션의 이름 설정
+
+- `animation-duration: 시간초;` : 움직이는 시간
+
+- `animation-iteration-count: 숫자;` : 반복여부 처리 / (infinite 는 무한반복)
+
+- `animation-direction: ;` : 방향설정
+
+  - `normal` : 정방향
+  - `reverse` : 역방향
+  - `alternate` : 왕복
+  - `alternate-reverse` : 역순으로 왕복
+
+- `animation-timing-function: ;` : 움직임 처리 - transition과 같음
+
+- `animation-fill-mode: ;` : 움직임의 마무리처리
+
+  - `backwards` : 마지막에 설정된 값으로 끝낸다
+  - `both` : 
+  - `forwards` : 처음에 설정된 값으로 끝낸다
+
+- `animation-play-state: 속성;`
+
+  - `running` : 실행하기
+  - `paused` : 멈추기
+
+  ```css
+  @keyframes myMove {
+    0% { transform: translate(0px);}
+    50% { transform: translate(-100px, -100px) rotate(360deg);}
+    100%{ transform: translate(500px, 100px);}
+  }
+  ```
+
+- `animation: myMove 1500ms infinite alternate linear both  500ms;` : 한줄로 처리 가능
