10월 27일 필기내용

--- a/studyContent/study_211027.md
+++ b/studyContent/study_211027.md
@@ -8,3 +8,13 @@ web에서 사용가능한 이미지
 - gif (움짤)
 - webp (webM과 동일하게 구글에서 만든 이미지) - IE, safari, photoshop
 
+
+
+js
+
+`document.querySelector(선택자);`
+
+jQuery
+
+`$(선택자);`
+
