--- a/studyContent/study_211103.md
+++ b/studyContent/study_211103.md
@@ -3,22 +3,45 @@
 #### display: flex;
 
 - 부모에 쓰면 자식에게 적용됨
+
 - `justify-content: 속성;`
+
   - `left` : 왼쪽 정렬
   - `right` : 오른쪽 정렬
   - `center` : 가운데 정렬
   - `space-between` : 양쪽 정렬
-  - `space-around` : 양끝에 공간을 가지는 양쪽 정렬
+  - `space-around` : 양끝에 공간이 사이 공간의 절반을 가지는 양쪽 정렬
+  - `space-evenly` : 사이 간격과 양끝 공간의 간격이 같은 양쪽정렬
   - `flex-start` : 시작위치에서 정렬
   - `flex-end` : 끝위치에서 정렬
+
 - `flex-direction: 속성;` - 정렬의 기준 위치
+
   - `row` : 가로정렬
   - `column` : 세로정렬
+
 - `aline-items: 속성; ` :아이템들이 한 줄일 경우 사용 - 기준이 어디인지 정해줌
+
   - `flex-start` : 시작점이 기준
   - `flex-end` : 끝점이 기준
+
 - `aline-content: 속성;` : 아이템들이 여러 줄일 경우 사용 - `aline-items`와 기능은 같음
-  - 주로 `flex-wrap: wrap;` 과 함께 사용
+
+  - 주로 `flex-wrap: wrap;` 과 함께 사용 (줄바꿈)
+
 - `flex-wrap: 속성;`
+
   - `wrap` : 감싸다 - 부모의 크기보다 넘칠 경우 줄바꿈
   - `nowrap` : 감싸지 않는다 - 부모의 크기보다 넘쳐도 가로로 배치
+
+- ---
+
+- `order` : 아이템들의 순서를 정해줌
+
+
+
+
+
+[flex 개구리 게임](https://flexboxfroggy.com/#ko)
+
+[gird 당근 게임](https://cssgridgarden.com/#ko)
