--- a/studyContent/study_211104.md
+++ b/studyContent/study_211104.md
@@ -28,11 +28,62 @@
 
 다른 프로그래밍언어와 다른점 중 대표적 하나는 객체 내부에 배열을 담거나, 함수를 담을 수 있다.
 
+Object/function 형타입은 단순 한가지의 개념을 가지고 있는 것이 아니고 여러 형타입을 담는 복합성의 특징
+
+그렇기에 Object/function 형타입으로 사용할 변수처리는 참조변수 개념으로 처리
+
 - **객체(배열/객체)**
+  
   - **배열**(array) : html문서에서 말하는 ol처럼 여러개의 목록으로 [] 안에 내용을 나열하는 것
+  
+    - ```js
+      var arr = ['키보드', '마우스', '태블릿', '모니터', '노트북', '웹캠'];
+      console.log( arr, typeof(arr) );
+      /* 
+      0: "키보드"
+      1: "마우스"
+      2: "태블릿"
+      3: "모니터"
+      4: "노트북"
+      5: "웹캠"
+      length: 6
+      */
+      console.log( arr[3] ); // 모니터
+      
+      arr[5] = '마이크'; // 웹캠 -> 마이크
+      console.log( arr[5] ); // 마이크
+      ```
+  
+    - new Array()를 이용하여 배열을 생성하는 방식은 권장하지 않는다. -> 바로 [] 작성 후 바로 수행
+  
+    - `push` : 배열 맨 뒤에 추가
+  
+    - `unshift` : 배열 맨 앞에 추가
+  
+    - `pop` : 배열에서 마지막 하나를 제거
+  
+    - `shift` : 배열의 맨 앞 하나를 제거
+  
+    - ```js
+      arA.push('커피');
+      arA.push('쥬스');
+      arA.push('밥');
+      arA.unshift(5);
+      arA.unshift(0);
+      arA.unshift(0000);
+      
+      console.log( arA ); // [0, 0, 5, '물', '약', '커피', '쥬스', '밥']
+      
+      arA.pop(); // [0, 0, 5, '물', '약', '커피', '쥬스']
+      arA.shift(); // [0, 5, '물', '약', '커피', '쥬스']
+      ```
+  
   - **객체**(object) : 객체: 배열처럼 나열하기는 하지만 순서는 없고, 해당하는 목록에 대한 정의를 하는것으로 html의 dl/css형태의 개념과 같다. {} 내부에 여러개의 내용을 담아서 그룹화 시킨다.
 - **함수**(function) : 바로 실행시키거나 내용을 담는 기능이라기보다는 어떠한 행동을 처리하기 위해 만들어놓은 묶음
+  
   -  (선언식, 표현식, 즉시실행함수)
+
+> js는 순서를 첫번째를 0부터 처리
 
 
 
