--- a/studyContent/study_211104.md
+++ b/studyContent/study_211104.md
@@ -130,8 +130,9 @@ console.log( num, typeof(num) );
 
 
 
-#### 변수
+#### 스코프(범위)
 
 - 전역변수 : 광범위한 곳에서 다 사용 가능한 변수
 - 지역변수 : 일부에서만 사용가능한 변수
   - ex) 함수 내부에 선언한 변수
+
