--- a/studyContent/study_211105.md
+++ b/studyContent/study_211105.md
@@ -1,1 +1,19 @@
 ## 21.11.05
+
+**js에서 id명을 선택하는 방법**
+
+- `document.getElementById(id이름);`
+- `document.querySelector(css와 동일한 선택자);`
+
+**js에서 요소를 생성하는 방법**
+
+- `document.createElement();` 
+  - 요소만 생성
+  - 생성해서 어딘가에 넣을 준비
+  - `document.createElement('div');`
+- `선택자.innerHTML = '요소';` 
+  - 요소를 생성하여 선택자 내부에 넣은것
+  - 기존 선택자 내부에 존재하는것을 삭제 후 처리
+  - `선택자.innerHTML = '<div></div>';`
+- `선택자.append(요소);`
+  - 선택자 내부 뒤에 요소를 삽입 (단, text형태는 글자로 삽입)
