필기내용 추가

--- a/studyContent/study_211108.md
+++ b/studyContent/study_211108.md
@@ -1,2 +1,49 @@
 ## 21.11.08
 
+#### 할당
+
+`+=` : 자기 자신에게 값을 할당/연산
+
+- `n += 60;` 은 `n = n + 60;`과 같은 의미
+- `-=`
+- `*=`
+- `/=`
+
+
+
+#### 증감
+
+`++` : 1씩 늘어남
+
+- `n++` : 결과 도출 후 1 더하기 / 후치
+- `++n` : 1 더한 후 결과 도출 / 전치
+
+`--` : 1씩 줄어듬
+
+
+
+#### 비교
+
+- `a === b` : type 형식까지 동일한지 여부 (같으면 true / 다르면 false)
+
+- `a !== b` : type 형식까지 다른지 여부 (다르면 true / 같으면 false)
+
+- `a < b` : a가 b보다 작은가? (작으면 true / 크거나 같으면 false)
+  - `a <= b` : a가 b보다 작거나 같은가? (작거나 같으면 true / 크면 false)
+
+- `a > b` : a가 b보다 큰가? (크면 true / 작거나 같으면 false)
+  - `a >= b` : a가 b보다 크거나 같은가? (크거나 같으면 true / 작으면 false)
+
+- `||` : 또는 (or) / 둘중 하나 이상 참이면 true
+  - `|` : 0/1로 결과 도출
+
+- `&&` : 그리고 (and) / 둘다 참이면 true
+  - `&` : 0/1로 결과 도출
+- `!` : 부정(반대)
+
+
+
+#### 삼항연산자
+
+`(조건)? 참 : 거짓;` : 삼항연산자 기본 형태
+
