--- a/studyContent/study_211110.md
+++ b/studyContent/study_211110.md
@@ -1,1 +1,23 @@
 ## 21.11.10
+
+#### js
+
+#### switch
+
+- 기본형태
+
+  ```js
+  switch (매개변수) {
+    case 조건값:
+      조건값과 매개변수가 일치하면 수행
+    break; // break는 더이상 해당조건을 수행하지 않고, switch 문법을 종료
+    case 조건값2:
+      조건값과 매개변수가 일치하면 수행
+    break;
+    default:
+      위 조건들이 일치하지 않으면 수행
+      
+  }
+  ```
+
+- 
