--- a/studyContent/study_211112.md
+++ b/studyContent/study_211112.md
@@ -68,9 +68,10 @@
 - for의 변형된 형태로 배열에서 많이 사용하는 기법으로 알려져있지만, 반대로 배열에서는 지양, 객체({})에서 사용되는 기법
 - `for( in ){}`
 
-#### forEach
+#### forEach()
 
 - for의 변형된 형태로 배열의 반복으로 사용되는 기법으로, 배열요소를 각각 수행한다는 의미
+- <u>배열만 가능</u>
 - `[].forEach(funtion(data,index){})`
 
 
@@ -97,6 +98,104 @@
 1. document.creatElement(요소이름);
 2. 생성된 요소에 기능 첨부
 3. 생성된 요소를 선택된 요소에 담기 : `append()`
+
+
+
+---
+
+#### scss
+
+#### @mixin
+
+- 기본형태
+
+  ```scss
+  @mixin name() {
+      
+  }
+  ```
+
+- 예시(background)
+
+  ```scss
+  @mixin bgImg($i, $r:no-repeat, $p:50% 50%, $z:initial) { 
+      // '$i'제외 @import로 불러올때 기본값 정해줌
+    background : { // 앞부분이 같은 'background'이기 때문에 하나로 묶어줌
+      image: url(#{$url}#{$i});
+      repeat: $r;
+      position: $p;
+      size: $z;
+    }
+  }
+  ```
+
+- 예시(width, height)
+
+  ```scss
+  @mixin sixe($w:100%, $h:auto){
+    width: $w; height: $h;
+    @content; // 추후 'min-height'같은 추가적인 내용을 넣기위해 필요
+  }
+  ```
+
+- 예시(rem변환)
+
+  ```scss
+  @function rem($u){
+    @return ($u/$baseSize) + rem;
+  }
+  
+  @mixin unit($s, $u){
+    #{$s}:#{$u}px;
+    #{$s}:rem($u);
+  }
+  ```
+
+  
+
+- **불러오기**
+
+  ```scss
+  #wrap {
+    @include bgImg("file.png"); // @include로 불러온 후 ()안에 필요 내용 넣기
+  }
+  ```
+
+
+
+#### @function
+
+- 기본형태
+
+  ```scss
+  @function name(){
+      @return 내용; // !!! @return !!! 무조건 필요
+  }
+  ```
+
+- 예시(vw변환)
+
+  ```scss
+  $device: 360; // 밑 함수에서 필요한 변수 선언
+  @function vw($u, $d:$device){
+    @return ($u/$d*100)+vw;
+  }
+  ```
+
+- **불러오기**
+
+  ```scss
+  $device: 360;
+  .div1 {
+    width: vw(40); // 함수처럼 그냥 불러온 후 ()안에 필요한 값 입력
+  }
+  ```
+
+
+
+
+
+
 
 
 
