for문, forEach문 + 함수화처리

--- a/studyContent/study_211122.md
+++ b/studyContent/study_211122.md
@@ -198,6 +198,125 @@ var listFn = function(){
 
 
 
+---
+
+#### html에 요소 생성
+
+```js
+// document.getElementsByClassName('navigation')[0];
+var navi = document.querySelector('.navigation');
+// navi.style.width = '100%';
+// navi.style.height = '50px';
+// navi.style.backgroundColor = '#dcd';
+navi.style = "width:100%; height:50px; background-color:#dcd";
+
+// 생성 -> document.createElement('ul');
+// var makeUl2 = '<ul class="list"></ul>'; // innerHTML을 사용시 직접 내용을 작성
+// navi.innerHTML = makeUl2;
+
+var makeUl = document.createElement('ul'); // innerHTML방식이 아니라 내부에 추가로 삽입할 때 요소로 삽입 처리
+makeUl.classList.add('list');
+navi.append(makeUl);
+
+var UlList = document.querySelector('.list');
+var makeLi = document.createElement('li');
+var title = dataList[0].title;
+var link =  dataList[0].link;
+var makeA = '<a class="link"></a>';
+makeLi.innerHTML = makeA;
+var findA = makeLi.querySelector('a');
+findA.href = link;
+findA.innerText = title;
+UlList.append(makeLi);
+```
+
+
+
+- for문으로 li 요소를 ul에 각각 여러개 삽입
+
+  ```js
+  var UlList = document.querySelector('.list');
+  var i = 0;
+  var len = dataList.length;
+  var makeLi, makeA, findA, title, link;
+  
+  for(; i<len; i+=1){
+    makeLi = document.createElement('li');
+    makeA = '<a class="link">sample</a>';
+    makeLi.innerHTML = makeA;
+    findA = makeLi.querySelector('a');
+    
+    title = dataList[i].title;
+    link = dataList[i].link;
+    findA.href = link;
+    findA.innerText = title;
+    UlList.append(makeLi); // Ullist.내부의 뒤에 삽입(생성된 li)
+  }
+  ```
+
+
+
+- forEach를 이용해 li 요소를 ul에 각각 여러개 삽입
+
+  ```js
+  dataList.forEach(function(content){
+    // console.log(data.title, data.link, index);
+    // forEach가 끝나면 외부에서 변수는 모르는 변수이기 때문에 내부에 써주는 것이 맞음
+    var makeLi = document.createElement('li'); 
+    var makeA = '<a class="link">sample</a>';
+    makeLi.innerHTML = makeA;
+    var findA = makeLi.querySelector('a');
+    findA.href = content.link;
+    findA.innerText = content.title;
+    UlList.append(makeLi);
+  });
+  ```
+
+for문과 forEach의 차이는 전체를 순환한다는 의미(0~9)/각각 처리(값자체)
+
+- for문을 함수화 처리
+
+  ```js
+  var i = 0;
+  var len = dataList.length;
+  
+  var loopFn2 = function(i){
+    var makeLi, makeA, findA, title, link;
+    makeLi = document.createElement('li');
+    makeA = '<a class="link">sample</a>';
+    makeLi.innerHTML = makeA;
+    findA = makeLi.querySelector('a');
+  
+    title = dataList[i].title;
+    link = dataList[i].link;
+    findA.href = link;
+    findA.innerText = title;
+    UlList.append(makeLi); // Ullist.내부의 뒤에 삽입(생성된 li)
+  }
+  
+  for(; i<len; i+=1){
+    loopFn2(i);
+  }
+  ```
+
+- forEach문을 함수화 처리
+
+  ```js
+  var loopFn1 = function(content){
+    var makeLi = document.createElement('li'); 
+    var makeA = '<a class="link">sample</a>';
+    makeLi.innerHTML = makeA;
+    var findA = makeLi.querySelector('a');
+    findA.href = content.link;
+    findA.innerText = content.title;
+    UlList.append(makeLi);
+  };
+  
+  dataList.forEach( loopFn1 );
+  ```
+
+  
+
 
 
 
