jQuery, js 외부자료 가져오기

--- a/studyContent/study_211123.md
+++ b/studyContent/study_211123.md
@@ -30,3 +30,81 @@ fn(jQuery);
 하지만 jQuery와 다른 라이브러리를 같이 사용하다보면 $때문에 충돌이 발생할 수 있기 때문에
 
 (function($){})(jQuery)와 같이 선언해놓고 사용을 하면 {} 사이에서는 **$가 다른 라이브러리와 충돌하는 일 없이 jQuery를 사용**할 수 있다.
+
+
+
+- jQuery특징
+
+  1. $() 선택자 이후에 들어가는 요소들은 대부분 메소드
+
+     해석을 하면, 용어 그대로 읽으면 됨
+
+  2. $.메소드() : 유틸리티메소드 - 어떠한 기능 처리 - 이후에도 메소드
+
+     해석을 하면, 메소드 기준으로 읽으면 됨
+
+  - `$.ajax().done(function(){});` : Asynchronous JavaScript and XML(JSON) 
+
+    <u>실시간(비동기)</u>으로 자료 체크기술
+
+    동기 : 새로고침 또는 아예 다른 페이지로 전환
+
+  - 비동기
+
+  ```js
+  (function($){
+    var path = '../data/sample.txt';
+    var dataFile;
+    $.ajax({
+      url:path
+    }).done(function(data){
+      // console.log(data);
+      var importData = data;
+      var arr = importData.split(',');
+      // console.log(arr);
+      dataFile = arr; // undefined - 비동기식은 데이터를 가져오는데 시간이 걸리기 때문에 undefined
+    });
+  
+    // setTimeout은 정해진 일정시간 뒤에 기능을 수행하는 함수
+    setTimeout(function(){
+      console.log(dataFile);
+    }, 10); // 비동기식이 데이터를 불러오는데 시간이 걸려 10ms 후에 실행해라
+  })(jQuery);
+  ```
+
+  
+
+#### javascript
+
+
+
+#### 외부자료 가져오기
+
+- `XMLHttpRequest();` : 네트워크(웹)를 통한 자료 요청기술
+
+- `async` - true : 비동기 / false : 동기
+
+- 예시
+
+  ```js
+  var xhr = new XMLHttpRequest();
+  var method = 'GET';
+  var url = '../data/sample.txt';
+  var async = true; // 비동기 승인
+  
+  // 자료를 요청
+  var method = 'GET';
+  // xhr.open(method방식, 처리할 파일의 경로, 비동기 승인여부);
+  xhr.open(method, url, async);
+  // <- 응답처리 내용(보류)
+  // 자료 요청을 위해 전송
+  xhr.send();
+  
+  // console.log( xhr.responseText ); 
+  // jQuery처럼 외부자료를 읽는데 시간이 필요함
+  setTimeout(function(){
+    console.log( xhr.responseText );
+  }, 10);
+  ```
+
+  
