--- a/studyContent/study_211123.md
+++ b/studyContent/study_211123.md
@@ -1,10 +1,10 @@
 # 21.11.23
 
-#### jQuery
+[toc]
+
+## jQuery
 
 `$` : jQuery를 의미
-
-- jQuery 시작
 
 - jQuery 시작
 
@@ -74,7 +74,7 @@ fn(jQuery);
 
   
 
-#### javascript
+## javascript
 
 
 
@@ -83,6 +83,26 @@ fn(jQuery);
 - `XMLHttpRequest();` : 네트워크(웹)를 통한 자료 요청기술
 
 - `async` - true : 비동기 / false : 동기
+
+-  외부 문서 불러오기
+
+  1. 생성자 함수 `XMLHTTLRequest();`
+
+  2. 불러온 함수를 객체화
+
+  3. 객체 내부의 메소드
+
+  ----------------------------------------------
+
+   예외처리 : try{}catch(){}
+
+  4. 상태메세지 처리 : 연결상태가 어떠한 상태인지 체크 : `onreadystatechange`
+
+  ----
+
+  5. 문서를 찾아 열어주기 : `변수.open(method(처리방식), url(불러올 주소), async(비동기처리 허용유무-기본값 : true(비동기)))`
+
+  6. 문서 처리 : `변수.send()`
 
 - 예시
 
@@ -107,4 +127,57 @@ fn(jQuery);
   }, 10);
   ```
 
-  
+
+
+#### 네트워크 상태 표시
+
+``` js
+var http = new XMLHttpRequest();
+var stateMessage;
+
+http.onreadystatechange = function(){
+  console.log(http.readyState);
+  switch(http.readyState){
+    case XMLHttpRequest.UNSENT: // 0
+      stateMessage = '서버와의 데이터 연결 끊어짐'
+      break;
+    case XMLHttpRequest.OPENED: // 1
+      stateMessage = '서버연결'
+      break;
+    case XMLHttpRequest.HEADERS_RECEIVED: // 2
+      stateMessage = '서버 접근 중, 파일 검색중'
+      break;
+    case XMLHttpRequest.LOADING: // 3
+      stateMessage = '데이터 불러오는 중'
+      break;
+    case XMLHttpRequest.DONE: // 4
+      stateMessage = '서버와 연결 대기 중'
+      break;
+  }
+};
+
+// http.onreadystatechange();
+http.open('GET', '../data/person_card.json', true);
+http.send();
+
+setTimeout(function(){
+  console.log(stateMessage);
+  console.log( http );
+},100);
+```
+
+
+
+
+
+## 기타
+
+#### 네트워크 상태 표시
+
+[http 상태코드 참고 사이트](https://ko.wikipedia.org/wiki/HTTP_%EC%83%81%ED%83%9C_%EC%BD%94%EB%93%9C#4xx_(%EC%9A%94%EC%B2%AD_%EC%98%A4%EB%A5%98))
+
+- 1xx (정보): 요청을 받았으며 프로세스를 계속한다
+- 2xx (성공): 요청을 성공적으로 받았으며 인식했고 수용하였다
+- 3xx (리다이렉션): 요청 완료를 위해 추가 작업 조치가 필요하다
+- 4xx (클라이언트 오류): 요청의 문법이 잘못되었거나 요청을 처리할 수 없다
+- 5xx (서버 오류): 서버가 명백히 유효한 요청에 대해 충족을 실패했다
